--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         "classmap": ["src"]
     },
     "require": {
-        "php": ">=8.0",
-        "symfony/http-foundation": "^5.4|^6.0",
+        "php": "^8.2",
+        "symfony/http-foundation": "^5.4|^6.0|^7.0",
         "twig/twig": "^3.3"
     }
 }
